tests/sksl/errors/MultipleFieldsInInterfaceBlocks.glsl
### Compilation failed:

error: 3: field 'f' was already defined in the same interface block ('IB')
    float f;
    ^^^^^^^^
error: 7: symbol 'f' was already defined
IB2 { float f; };
      ^^^^^^^^
2 errors
